--- a/temperature-probe/Cargo.toml
+++ b/temperature-probe/Cargo.toml
@@ -10,11 +10,8 @@ path = "./src/bin/main.rs"
 
 [dependencies]
 esp-hal = { version = "~1.0", features = ["defmt", "esp32c6", "unstable"] }
-
-
-defmt                  = "1.0.1"
+defmt = "1.0.1"
 esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c6"] }
-
 critical-section = "1.2.0"
 esp-backtrace = { version = "0.18.1", features = [
   "defmt",
@@ -22,6 +19,12 @@ esp-backtrace = { version = "0.18.1", features = [
   "panic-handler",
 ] }
 esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32c6"] }
+embedded-hal-bus = "0.3.0"
+
+# peripherals
+embedded-graphics = "0.8.1"
+sh1106 = "0.5.0"
+bme280 = "0.5.0"
 
 
 [profile.dev]
