--- a/temperature-probe/Cargo.toml
+++ b/temperature-probe/Cargo.toml
@@ -10,22 +10,28 @@ path = "./src/bin/main.rs"
 
 [dependencies]
 esp-hal = { version = "~1.0", features = ["defmt", "esp32c6", "unstable"] }
+esp-rtos = { version = "0.2.0", features = ["defmt", "embassy", "esp32c6"] }
 defmt = "1.0.1"
 esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c6"] }
-critical-section = "1.2.0"
+embassy-executor = { version = "0.9.1", features = ["defmt"] }
+embassy-time = { version = "0.5.0", features = ["defmt"] }
 esp-backtrace = { version = "0.18.1", features = [
   "defmt",
   "esp32c6",
   "panic-handler",
 ] }
 esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32c6"] }
+
 embedded-hal-bus = "0.3.0"
+
+critical-section = "1.2.0"
+static_cell      = "2.1.1"
 
 # peripherals
 embedded-graphics = "0.8.1"
-sh1106 = "0.5.0"
-bme280 = "0.5.0"
-
+bme280 = "0.5.1"
+#oled_async = { git = "https://github.com/techmccat/sh1106.git", branch = "master" }
+mini-oled = "0.1.3"
 
 [profile.dev]
 # Rust debug is too slow.
