--- a/temperature-probe/Cargo.toml
+++ b/temperature-probe/Cargo.toml
@@ -21,17 +21,14 @@ esp-backtrace = { version = "0.18.1", features = [
   "panic-handler",
 ] }
 esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32c6"] }
-
 embedded-hal-bus = "0.3.0"
-
 critical-section = "1.2.0"
-static_cell      = "2.1.1"
 
 # peripherals
-embedded-graphics = "0.8.1"
 bme280 = "0.5.1"
-#oled_async = { git = "https://github.com/techmccat/sh1106.git", branch = "master" }
+embedded-graphics = "0.8.1"
 mini-oled = "0.1.3"
+heapless = "0.9.2"
 
 [profile.dev]
 # Rust debug is too slow.
